# ARIAC_2023

./: readme.md  testFile.py  text.txt
group5/: CMakeLists.txt  package.xml  readme.md
group5/group5/: competition_client.py  store_and_submit.py
group5/launch/: rwa_1.launch.py
group5/nodes/: comp_state_subscriber.py  store_order_subscriber.py
group5_final/: CMakeLists.txt  README.md  package.xml
group5_final/config/: group5_sensors.yaml
group5_final/config/trials/: final_1.yaml  final_2.yaml  rwa3.yaml  rwa3_v2.yaml  rwa4.yaml  rwa4_v2.yaml  rwa4_v3.yaml
group5_final/group5_final/: competition_client.py  part_locations.py  store_and_submit.py
group5_final/include/group5_final/: competition_client.py  competition_state_node.py  empty_bin_pose_tracker.hpp  robot.hpp  robot_v1.hpp  task_manager_node.py  track_bin.hpp
group5_final/launch/: group5_final.launch.py  group5_final_invent.launch.py
group5_final/nodes/: competition_state_node.py  task_manager_node.py
group5_final/src/: robot.cpp  robot_v1.cpp
group5_msgs/: CMakeLists.txt  package.xml
group5_msgs/msg/: FloorRobotTask.msg
group5_rwa_1/: CMakeLists.txt  package.xml  readme.md
group5_rwa_1/group5_rwa_1/: competition_client.py
group5_rwa_1/launch/: rwa_1.launch.py
group5_rwa_1/nodes/: comp_state_subscriber.py  store_order_subscriber.py
group5_rwa_2/: CMakeLists.txt  README.md  package.xml
group5_rwa_2/group5_rwa_2/: agv_apis.py  competition_client.py  part_locations.py  perform_task.py  submit_order_nodes.py
group5_rwa_2/launch/: rwa_2.launch.py
group5_rwa_2/nodes/: agv_management.py  comp_state_subscriber.py  store_order_subscriber.py  store_order_subscriber_bin.py
group5_rwa_2/src/: group5_rwa_2.cpp
group5_rwa_3/: CMakeLists.txt  README.md  package.xml
group5_rwa_3/config/: group5_sensors.yaml
(+19 files in other folders)
